--- a/client/app/index.jade
+++ b/client/app/index.jade
@@ -6,7 +6,13 @@ html
     title Upload Image
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet', href='style.css')
+    if isProduction
+      | <%= stylesheet_link_tag "application" %>
+    else
+      link(rel='stylesheet', href='stylesheets/style.css')
   body
     #content
-    script(src='bundle.js')
+    if isProduction
+      | <%= javascript_include_tag "application" %>
+    else
+      script(src='javascripts/bundle.js')
