--- a/client/app/index.sass
+++ b/client/app/index.sass
@@ -1,3 +1,13 @@
 @import './style/reset'
 @import './style/modal'
 @import './style/imageList'
+
+body
+  background: #eee
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif
+  *
+    box-sizing: border-box
+.content
+  max-width: 960px
+  width: 100%
+  margin: 20px auto
